--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 
   --background-color: #FEFEFE;
   --background-color-secondary: #0D0C0C;
+  --purple: #9147DC;
   color: #000000;
   --text-color-secondary: #FFFFFF;
   
