--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: var(--background-color);
-
+  --border-color-primary: #2A2A2A;
   --background-color: #FEFEFE;
   --background-color-secondary: #0D0C0C;
   --purple: #9147DC;
