--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --purple: #9147DC;
   color: #000000;
   --text-color-secondary: #FFFFFF;
+  --text-color-tertiary: #D2D2D2;
   
 
   box-sizing: border-box;
