--- a/components/Banner/Banner.css
+++ b/components/Banner/Banner.css
@@ -8,19 +8,19 @@
     display: flex;
     justify-content: space-between;
     height: 568px;
-    max-width: 1920px;
+    max-width: 1500px;
     margin: 0 auto;
 }
 
 .left-square {
 
-    width: 72px;
+    width: 73px;
     height: 588px;
 }
 
 .left-square-main {
     border: 1px solid var(--border-color-primary);
-    width: 73px;
+    width: 100%;
     height: 488px;
     border-left: none;
     
@@ -47,7 +47,7 @@
 .main-content {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: start;
     align-items: start;
     width: 100%;
     margin: 0 auto;
@@ -55,7 +55,7 @@
 }
 
 .main-title {
-    max-width: 900px;
+    max-width: 600px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -71,6 +71,7 @@
     font-size: 3rem;
     font-weight: 500;
     line-height: 120%;
+    
 }
 
 .main-title p {
@@ -103,14 +104,14 @@
 .illustration {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
     max-height: 400px;
     padding-top: 50px;
 }
 
 .illustration img {
-    max-width: 650px;
+    width: 650px;
     width: 100%;
     height: 100%;
     min-height: 100%;
@@ -149,7 +150,7 @@
         display: flex;
         justify-content: end;
         align-items: start;
-        max-height: 500px;
+       
     }
 
 }
