--- a/components/About/About.css
+++ b/components/About/About.css
@@ -1,16 +1,16 @@
-.about-container {
-    width: 100%;
-    display: flex;
-    max-width: 100%;
-    margin-top: 142px;
-}
-
-.about-content {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1352px;
+.company-container {
     width: 100%;
     margin: 0 auto;
-    padding-left: 95px;
+    height: 715px;
+    box-sizing: border-box;
+}
+
+.company-content {
     
+    height: 430px;
+    max-width: 1354px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
