--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    /* width: 100vw; */
+    width: 100%;
     height: 80px;
     background-color: var(--background-color-secondary);
     color: var(--text-color-secondary);
@@ -20,7 +20,7 @@
 }
 
 .left-squere {
-    min-width: 73px;
+    min-width: 72px;
     height: 80px;
     display: flex;
     /* border: 1px solid #2A2A2A; */
@@ -29,7 +29,7 @@
 }
 
 .main-header{
-    height: 80px;
+    height: 82px;
     width: 100%;
     padding: 0px 20px;
     display: flex;
@@ -116,7 +116,7 @@
     }
 
     .left-squere {
-        min-width: 32px;
+        min-width: 31px;
     }
 
     .left-squere img {
