--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --border-color-primary: #2A2A2A;
   --background-color: #FEFEFE;
   --background-color-secondary: #0D0C0C;
+  --text-color-suport: #535862;
   --purple: #9147DC;
   color: #000000;
   --text-color-secondary: #FFFFFF;
