--- a/components/Banner/Banner.css
+++ b/components/Banner/Banner.css
@@ -52,11 +52,12 @@
     align-items: start;
     width: 100%;
     margin: 0 auto;
-    
 }
 
 .main-title {
     max-width: 600px;
+    max-height: 100%;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -132,6 +133,49 @@
     position: absolute;
     display: none;
 }
+
+.social-media-links {
+    display: flex;
+    gap: 1rem;
+    align-self: start;
+    align-items: end;
+    padding-bottom: 2rem;
+    height: 100%;
+}
+
+.social-media-links a {
+    background-color: transparent;
+    margin: 0px;
+    padding: 0px;
+}
+.icons {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.icons img {
+    width: 14px;
+    height: 14px;
+}
+
+.linkedin-icon {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.linkedin-icon a {
+    line-height: 150%;
+    padding-top: 4px;
+}
+
+.linkedin-icon img {
+    width: 15px;
+    height: 15px;
+}
+
+
 
 @media screen and (min-width: 1500px) {
 
@@ -238,6 +282,13 @@
         display: block;
         width: 240px;
         left: 40px;
+    }
+
+}
+@media screen and (max-width: 400px) {
+
+    .social-media-links {
+        display: none;
     }
 
 }
