--- a/components/Cases/Cases.css
+++ b/components/Cases/Cases.css
@@ -1,9 +1,27 @@
 .cases-container {
-    
     margin: 142px 0px;
+    width: 100%;
+    height: 813px;
     background-color: var(--background-color-secondary);
     background-image: url('../../src/assets/cases-background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    color: var(--text-color-secondary);
+}
+
+.cases-content {
+    display: flex;
+    padding: 6.5rem 5.8125rem;
+    margin: 0 auto;
+    height: 100%;
+    max-width: 1500px;
+}
+
+.cases-text-support span::before {
+    content: '';
+    display: block;
+    width: 1.5rem;
+    height: 2px;
+    background-color: var(--purple);
 }
