--- a/components/Cases/Cases.css
+++ b/components/Cases/Cases.css
@@ -12,6 +12,7 @@
 
 .cases-content {
     display: flex;
+    flex-direction: column;
     padding: 6.5rem 5.8125rem;
     margin: 0 auto;
     height: 100%;
@@ -25,3 +26,183 @@
     height: 2px;
     background-color: var(--purple);
 }
+
+.cases-text {
+    width: 100%;
+    min-height: 201px;
+    display: flex;
+    gap: 1.5rem;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.cases-title {
+    max-width: 544px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.cases-title h2 {
+    font-family: 'Switzer', sans-serif;
+    font-size: 2.5rem;
+    line-height: 120%;
+    font-weight: 500;
+}
+
+.cases-title span {
+    color: var(--purple);
+    font-family: 'Archivo', serif;
+    font-size: 0.875rem;
+    line-height: 120%;
+    font-weight: 400;
+}
+
+.cases-text-support {
+    max-width: 487px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.cases-text-support p {
+    font-family: "Archivo", serif;
+    font-size: 1rem;
+    line-height: 150%;
+    font-weight: 300;
+    padding-bottom: 2.25rem;
+    place-self: flex-end;
+    align-self: flex-end;
+}
+
+.cases-cards {
+    color: var(--text-color-secondary);
+    display: flex;
+    gap: 1.5rem;
+}
+
+@media screen and (max-width: 1120px) {
+
+    .cases-text-support {
+        max-width: 387px;
+    }
+}
+
+@media screen and (max-width: 1030px) {
+
+    .cases-title h2 {
+        font-size: 1.75rem;
+        padding-bottom: 0.5rem;
+    }
+
+    .cases-text-support p {
+        padding-bottom: 0rem;
+        place-self: flex-end;
+        align-self: flex-end;
+        
+    }
+
+    .cases-text-support {
+        max-width: 320px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+    
+}
+
+@media screen and (max-width: 815px) {
+    
+    .cases-text {
+        width: 100%;
+        max-height: 201px;
+        display: flex;
+        gap: 1.5rem;
+        flex-direction: column;
+    }
+
+    .cases-title h2 {
+        padding-bottom: 0rem;
+    }
+
+    .cases-title {
+        max-width: 100%;
+        display: flex;
+        gap: 1rem;
+    }
+    
+
+    .cases-text-support span::before {
+        display: none;
+    }
+
+    .cases-text-support {
+        max-width: 100%;
+    }
+    
+}
+
+@media screen and (max-width: 768px) {
+    
+    .cases-content {
+        padding: 80px 20px;
+    }
+
+    .cases-cards {
+        white-space: nowrap;
+        overflow-x: auto;
+        gap: 1.5rem;
+        -webkit-overflow-scrolling: touch; 
+        scrollbar-width: none;      
+    }
+
+    .cases-cards::-webkit-scrollbar {
+        display: none;
+    }
+    
+}
+
+@media screen and (max-width: 530px) {
+    
+    .cases-container {
+        height: 872px;
+    }
+    
+}
+
+@media screen and (max-width: 490px) {
+    
+    .cases-text {
+        margin-bottom: 64px;
+    }
+    
+}
+
+@media screen and (max-width: 435px) {
+    
+    .cases-text {
+        margin-bottom: 110px;
+    }
+
+    .cases-container {
+        height: 1013px;
+    }
+    
+    .cases-content {
+    
+        height: 100%;
+        
+    }
+    
+    
+}
+
+@media screen and (max-width: 335px) {
+    
+    .cases-text {
+        margin-bottom: 150px;
+    }
+    
+}
+
