--- a/components/ProjectCard/ProjectCard.css
+++ b/components/ProjectCard/ProjectCard.css
@@ -3,15 +3,47 @@
     width: 100%;
     height: 372px;
     border-radius: 0.75rem;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.card-texts-container {
+    max-width: 249px;
+    width: 100%;
+    
+}
+ 
+
+.card-tags {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.project-thumbnail  {
+    place-self: end;
+    max-width: 292px;
+    width: 100%;
+    max-height: 303px;
+    object-fit: cover;
+    object-position: center right;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.project-thumbnail img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center right;
+    overflow: hidden; 
 }
 
 @media screen and (max-width: 768px) {
     
-    .card {
-        display: inline-block;
+    .card {   
         min-width: 490px;
     }
-    
 }
 
 @media screen and (max-width: 530px) {
@@ -19,7 +51,6 @@
     .card {
         display: inline-block;
         min-width: 290px;
-        height: 472px;
+        height: 530px;
     }
-    
 }
