--- a/components/ProjectCard/ProjectCard.css
+++ b/components/ProjectCard/ProjectCard.css
@@ -1,19 +1,59 @@
 .card {
-    max-width: 591px;
+    min-width: 591px;
     width: 100%;
     height: 372px;
     border-radius: 0.75rem;
     display: flex;
     justify-content: space-between;
     position: relative;
+    background-image: url(../../src//assets//background.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
 }
 
 .card-texts-container {
     max-width: 249px;
-    width: 100%;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
  
+.card-text-content {
+    max-width: 249px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 2.5rem;
+    padding-left: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.card-text-content p {
+    flex-wrap: wrap;
+    display: flex;
+    font-size: 0.875rem;
+    line-height: 150%;
+    color: var(--text-color-secondary);
+    font-weight: 300;
+    font-family: 'Archivo', serif;
+    padding-top: 1rem;
+}
+
+.card-tags {
+    padding-left: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.card-tags span {
+    border: 1px solid var(--text-color-secondary);
+    padding: 1px 6px;
+    border-radius: 6px;
+    font-size: 0.875rem;
+    line-height: 150%;
+    font-weight: 500;
+    font-family: 'Archivo', serif;
+}
+
 
 .card-tags {
     display: flex;
@@ -51,6 +91,23 @@
     .card {
         display: inline-block;
         min-width: 290px;
-        height: 530px;
+        height: 545px;
     }
+
+    .project-thumbnail img {
+        width: 100%;
+        max-height: 200px;
+        object-fit: contain;
+        object-position: center right;
+        overflow: hidden; 
+    }
+}
+
+@media screen and (max-width: 400px) {
+    
+    .card {
+        height: 544px;
+    }
+
+   
 }
