--- a/components/Cases/Cases.css
+++ b/components/Cases/Cases.css
@@ -2,6 +2,7 @@
     margin: 142px 0px;
     width: 100%;
     height: 813px;
+    height: auto;
     background-color: var(--background-color-secondary);
     background-image: url('../../src/assets/cases-background.png');
     background-repeat: no-repeat;
@@ -79,11 +80,20 @@
 .cases-cards {
     color: var(--text-color-secondary);
     display: flex;
+    width: 100%;
     gap: 1.5rem;
-    overflow-x: auto;
+    overflow-x: hidden;
     gap: 1.5rem;
     -webkit-overflow-scrolling: touch; 
     scrollbar-width: none;   
+    position: relative;
+    border-radius: 0.75rem;
+}
+
+.horizontal-scroll-wrapper {
+    display: inline-flex;
+    gap: 1.5rem;
+    will-change: transform;
 }
 
 @media screen and (max-width: 1120px) {
@@ -114,6 +124,18 @@
         align-items: flex-end;
     }
     
+}
+
+@media screen and (max-width: 1200px) {
+    .cases-cards {
+        overflow-x: auto; /* scroll nativo */
+        -webkit-overflow-scrolling: touch; 
+        scrollbar-width: none;
+      }
+    
+      .cases-cards::-webkit-scrollbar {
+        display: none;
+      }
 }
 
 @media screen and (max-width: 815px) {
@@ -169,7 +191,15 @@
 @media screen and (max-width: 530px) {
     
     .cases-container {
+        min-height: 990px;
+    }
+
+    .cases-content {
         height: 990px;
+    }
+
+    .horizontal-scroll-wrapper {
+        display: flex;
     }
     
 }
@@ -188,13 +218,13 @@
         margin-bottom: 110px;
     }
 
-    .cases-container {
+    /* .cases-container {
         height: 1060px;
     }
     
     .cases-content {
         height: 100%;
-    }
+    } */
     
 }
 
