--- a/components/ProjectCard/ProjectCard.css
+++ b/components/ProjectCard/ProjectCard.css
@@ -1,7 +1,7 @@
 .card {
-    min-width: 591px;
-    width: 100%;
-    height: 372px;
+    width: 550px;
+    max-width: 100%;
+    height: 350px;
     border-radius: 0.75rem;
     display: flex;
     justify-content: space-between;
@@ -92,6 +92,7 @@
         display: inline-block;
         min-width: 290px;
         height: 545px;
+        width: 100%;
     }
 
     .project-thumbnail img {
