--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,17 @@ svg {
   transform: translateZ(0); /* Força aceleração de hardware */
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+  background: #2A2A2A;
+}
 
+::-webkit-scrollbar-thumb {
+  background: #444444;  
+  border-radius: 0px; 
+  height: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #7321C5;
+}
