--- a/components/Process/Process.css
+++ b/components/Process/Process.css
@@ -19,7 +19,7 @@
     margin: 0 auto;
     width: 100%;
     padding: 6.5rem 5.8125rem;
-    margin-bottom: 5.875rem;
+    /* margin-bottom: 5.875rem; */
     gap: 3rem;
 }
 
@@ -132,7 +132,7 @@
         margin: 0 auto;
         width: 100%;
         padding: 6.5rem 1.25rem;
-        margin-bottom: 5.875rem;
+        /* margin-bottom: 5.875rem; */
     }
     
 }
