--- a/components/Cases/Cases.css
+++ b/components/Cases/Cases.css
@@ -34,7 +34,7 @@
     display: flex;
     gap: 1.5rem;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .cases-title {
@@ -200,6 +200,7 @@
 
     .horizontal-scroll-wrapper {
         display: flex;
+        margin-top: 3rem;
     }
     
 }
@@ -215,7 +216,7 @@
 @media screen and (max-width: 435px) {
     
     .cases-text {
-        margin-bottom: 110px;
+        padding-bottom: 110px;
     }
 
     /* .cases-container {
@@ -231,7 +232,12 @@
 @media screen and (max-width: 335px) {
     
     .cases-text {
-        margin-bottom: 150px;
+        padding-bottom: 150px;
+    }
+
+    .horizontal-scroll-wrapper {
+        display: flex;
+        margin-top: 7rem;
     }
     
 }
