--- a/components/Feedbacks/Feedbacks.css
+++ b/components/Feedbacks/Feedbacks.css
@@ -131,5 +131,12 @@
         font-family: 'Archivo', serif;
     }
     
-     
+}
+
+@media screen and (max-width: 340px) {
+    
+    .feedbacks-cards {
+        margin-top: 5rem;
+    }    
+
 }
