--- a/components/Newsletter/Newsletter.css
+++ b/components/Newsletter/Newsletter.css
@@ -86,6 +86,9 @@ input:focus {
     line-height: 150%;
     font-weight: 400;
     cursor: pointer;
+    color: var(--text-color-secondary);
+    font-size: 0.875rem;
+    line-height: 150%;
 }
 
 @media screen and (max-width: 1000px) {
