--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -84,3 +84,59 @@
     gap: 1.5rem;
 }
 
+@media screen and (max-width: 1090px) {
+    .footer-links {
+        flex-wrap: wrap;
+        width: 350px;
+        justify-content: start;
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 865px) {
+
+    .footer-logo {
+        width: 100%;
+        padding-bottom: 2rem;
+    }
+
+    .footer-sitemap {
+        flex-wrap: wrap;
+    }
+
+    .footer-links {
+        width: 100%;
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .footer-content {
+        padding: 6.5rem 20px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+
+    .footer-logo p{
+        align-content: center;
+        text-align: center;
+    }
+
+    .footer-logo img{
+        place-self: center;
+    }
+
+    .footer-links{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer-social {
+        flex-direction: column;
+        gap: 2.5rem;
+        text-align: center;
+    }
+}
