--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -8,6 +8,7 @@
     font-size: 400;
     line-height: 120%;
     letter-spacing: -0.1px;
+    
 }
 
 .header-container {
@@ -113,6 +114,8 @@
 
     .menu-icon-mobile {
         display: flex;
+        background-color: transparent;
+        border: none;
     }
 
     .left-squere {
@@ -129,6 +132,14 @@
 
     .header-logo img {
         width: 110px;
+    }
+
+    .header-mobile {
+        display: flex;
+        max-width: 100%;
+        max-height: 100%;
+        background-color: var(--background-color-secondary);
+        position: absolutes;
     }
     
 }
