--- a/components/MenuMobile/Menumobile.css
+++ b/components/MenuMobile/Menumobile.css
@@ -1,12 +1,8 @@
-.menu-mobile {
-    display: none;
-}
 
 @media screen and (max-width: 768px) {
     
     .menu-mobile {
-        display: flex !important;
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         z-index: 1000;
@@ -29,8 +25,12 @@
     }
 
     .menu-mobile-container {
+        position: absolute;
+        top: 0;
+        left: 0;
         display: flex;
         width: 100%;
+        height: 100%;
         flex-direction: column;
         padding: 24px 20px;
     }
