--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -116,6 +116,7 @@
         display: flex;
         background-color: transparent;
         border: none;
+        cursor: pointer;
     }
 
     .left-squere {
