--- a/components/MenuMobile/Menumobile.css
+++ b/components/MenuMobile/Menumobile.css
@@ -1,3 +1,21 @@
+.menu-mobile {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--background-color-secondary);
+    transform: translateX(100%);
+    transition: transform 0.6s ease;
+    z-index: 1000;
+}
+
+.menu-mobile-links ul li {
+    list-style: none;
+    padding: 0.75rem 0;
+}
+
 
 @media screen and (max-width: 768px) {
     
@@ -39,6 +57,7 @@
     .close-menu-mobile {
         background-color: transparent;
         border: none;
+        cursor: pointer;
     }
 
     .menu-mobile-links {
@@ -66,6 +85,7 @@
     .menu-mobile-button {
         width: 100%;
         display: flex;
+        
     }
 
     .menu-mobile-button a {
@@ -79,6 +99,7 @@
         font-size: 0.875rem;
         font-weight: 400;
         text-decoration: none;
+        
     }
 
 }
