--- a/components/Banner/Banner.css
+++ b/components/Banner/Banner.css
@@ -89,6 +89,24 @@
     z-index: 4;
 }
 
+.button-contact {
+    text-decoration: none;
+    color: var(--text-color-secondary);
+    background-color: var(--purple);
+    padding: 0.75rem 0rem;
+    border-radius: 50px;
+    max-width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1.5rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 150%;
+    font-family: 'Switzer', sans-serif;
+    z-index: 1; 
+}
+
 .main-title a {
     text-decoration: none;
     color: var(--text-color-secondary);
@@ -104,8 +122,7 @@
     font-weight: 400;
     line-height: 150%;
     font-family: 'Switzer', sans-serif;
-    z-index: 1;
-    
+    z-index: 1; 
 }
 
 .illustration {
