--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 80px;
+    height: 82px;
     background-color: var(--background-color-secondary);
     color: var(--text-color-secondary);
     font-family: "Archivo", serif;
@@ -8,7 +8,8 @@
     font-size: 400;
     line-height: 120%;
     letter-spacing: -0.1px;
-    
+    position: fixed;
+    z-index: 1000;
 }
 
 .header-container {
@@ -22,9 +23,9 @@
 
 .left-squere {
     min-width: 72px;
-    height: 80px;
+    height: 82px;
     display: flex;
-    /* border: 1px solid #2A2A2A; */
+    border-bottom: 1px solid #2A2A2A;
     justify-content: center;
     align-items: center;
 }
