--- a/components/About/About.css
+++ b/components/About/About.css
@@ -95,10 +95,12 @@
     letter-spacing: -1px;
 }
 
-.institutional-video .video iframe{
-    width: 591px;
-    height: 372px;
+
+.video img {
     border-radius: 0.375rem;
+    min-width: 591px;
+    max-height: 372px;
+    width: 100%;
 }
 
 @media screen and (min-width: 1500px) {
@@ -111,13 +113,15 @@
 
 @media screen and (max-width: 1280px) {
 
-    .institutional-video .video iframe{
-        width: 591px;
-        height: 372px;
+    .video {
         border-radius: 8px;
-        max-width: 100%;
-        max-height: 100%;
-        min-width: 400px;
+        width: 100%;
+    }
+
+    .video img {
+        border-radius: 0.375rem;
+        width: 100%;
+        min-width: 490px;
     }
 
     .company-content {
@@ -139,13 +143,10 @@
         padding-left: 93px;
     }
 
-    .institutional-video .video iframe{
-        width: 100%;
-        height: 372px;
-        border-radius: 8px;
-        max-width: 100%;
-        max-height: 100%;
-        min-width: 400px;
+    .video img {
+        border-radius: 0.375rem;
+        min-width: 100%;
+        object-fit: cover;
     }
 
     .company-text {
