--- a/components/Banner/Banner.css
+++ b/components/Banner/Banner.css
@@ -2,6 +2,7 @@
     background-color: var(--background-color-secondary);
     height: 668px;
     width: 100%;
+    z-index: 2000;
 }
 
 .banner-content {
@@ -51,6 +52,8 @@
     align-items: start;
     width: 100%;
     margin: 0 auto;
+    position: relative;
+    z-index: 1;
 }
 
 .main-title {
@@ -64,7 +67,7 @@
     padding-top: 9rem;
     padding-left: 1.25rem;
     position: relative;
-    /* z-index: 4; */
+    z-index: 1;
 }
 
 .main-title h1 {
@@ -73,7 +76,7 @@
     font-size: 3rem;
     font-weight: 500;
     line-height: 120%;
-    /* z-index: 4; */
+    z-index: 1;
     
 }
 
@@ -85,7 +88,7 @@
     line-height: 150%;
     max-width: 508px;
     width: 100%;
-    /* z-index: 4; */
+    z-index: 1;
 }
 
 .button-contact {
@@ -103,7 +106,8 @@
     font-weight: 400;
     line-height: 150%;
     font-family: 'Switzer', sans-serif;
-    /* z-index: 1;  */
+    z-index: 1;
+    position: relative;
 }
 
 .main-title a {
@@ -121,7 +125,8 @@
     font-weight: 400;
     line-height: 150%;
     font-family: 'Switzer', sans-serif;
-    /* z-index: 1;  */
+    z-index: 1;
+    position: relative;
 }
 
 .illustration {
@@ -158,10 +163,11 @@
 .mobile-background img {
     top: 60px;
     left: 5px;
-    width: 400px;
+    width: 100%;
     height: 100%;
     position: absolute;
     display: none;
+    
 }
 
 .social-media-links {
