--- a/components/Banner/Banner.css
+++ b/components/Banner/Banner.css
@@ -95,12 +95,11 @@
     text-decoration: none;
     color: var(--text-color-secondary);
     background-color: var(--purple);
-    padding: 0.75rem 2rem; /* Aumentei o padding horizontal para deixar o botão mais largo */
+    padding: 0.5rem 2rem; /* Aumentei o padding horizontal para deixar o botão mais largo */
     border-radius: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 1.5rem;
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 150%;
@@ -109,10 +108,9 @@
     position: relative;
     cursor: pointer;
     overflow: hidden;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-    border: 3px solid rgba(255, 255, 255, 0.3);
     transition: all 0.3s ease-in-out;
-    gap: 10px;
+    outline: 3px solid rgba(255, 255, 255, 0.3);
+    outline-offset: -3px;
     max-width: 300px; /* Aumentei o max-width para garantir mais largura */
     width: auto; /* Ajusta automaticamente */
   }
@@ -121,11 +119,6 @@
     width: 24px;
     height: 24px;
     transition: all 0.3s ease-in-out;
-  }
-  
-  .button-contact:hover {
-    transform: scale(1.05);
-    border-color: rgba(255, 255, 255, 0.6);
   }
   
   .button-contact:hover .icon {
