--- a/components/Newsletter/Newsletter.css
+++ b/components/Newsletter/Newsletter.css
@@ -89,7 +89,46 @@ input:focus {
     color: var(--text-color-secondary);
     font-size: 0.875rem;
     line-height: 150%;
+    transition: all 0.3s ease-in-out;
+    outline: 3px solid rgba(255, 255, 255, 0.3);
+    outline-offset: -3px;
+    position: relative;
+    overflow: hidden;
 }
+
+.newsletter-form button:hover::before {
+    animation: shine 1.5s ease-out infinite;
+  }
+  
+  .newsletter-form button::before {
+    content: "";
+    position: absolute;
+    width: 100px;
+    height: 100%;
+    background-image: linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0) 70%
+    );
+    top: 0;
+    left: -100px;
+    opacity: 0.6;
+  }
+  
+  @keyframes shine {
+    0% {
+      left: -100px;
+    }
+  
+    60% {
+      left: 100%;
+    }
+  
+    to {
+      left: 100%;
+    }
+  }
 
 @media screen and (max-width: 1000px) {
 
