--- a/pages/Contact/Contact.css
+++ b/pages/Contact/Contact.css
@@ -9,16 +9,98 @@
     background-color: var(--background-color-secondary);
     height: 100%;
     width: 50vw;
-    padding: 64px 71px;
+    padding: 84px 71px;
     color: var(--text-color-secondary);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.contact-content {
+    display: flex;
+    gap: 32px;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.contact-content button {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-family: 'Switzer', sans-serif;
+    font-size: 16px;
+    color: var(--text-color-secondary);
+    text-decoration: none;
+}
+
+.back-home {
+    text-decoration: none;
 }
 
 .contact-form {
     background-color: var(--background-color);   
     width: 50vw;
     border: none;
-    height: 100%;
+    height: 97%;
 }
+
+.contact-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 48px;
+}
+
+.contact-text h1 {
+    font-size: 36px;
+    font-family: 'Switzer', sans-serif;
+    color: var(--text-color-secondary);
+    font-weight: 600;
+    max-width: 27ch;
+    line-height: 130%;
+    
+}
+
+.contact-text p {
+    font-size: 16px;
+    font-family: 'Switzer', sans-serif;
+    color: var(--text-color-tertiary);
+    font-weight: 400;
+    max-width: 558px;
+    line-height: 130%; 
+}
+
+.contact-info {
+    display: flex;
+    gap: 1.5rem;
+    padding-top: 2rem;
+    flex-direction: column;
+    
+}
+
+.contact-info-item {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+}
+
+.contact-info h2 {
+    font-family: 'Switzer', sans-serif;
+    font-size: 1.125rem;
+    color: var(--text-color-secondary);
+    font-weight: 600;
+}
+
+.contact-info a {
+    font-family: 'Switzer', sans-serif;
+    font-size: 1rem;
+    color: var(--text-color-tertiary);
+    font-weight: 400;
+}
+
 
 .form {
     display: flex;
@@ -30,6 +112,8 @@
 .form {
     padding: 0px;
 }
+
+
 
 @media screen and (max-width: 790px) {
     
