feat: fix path erro

--- a/components/MenuMobile/Menumobile.css
+++ b/components/MenuMobile/Menumobile.css
@@ -16,6 +16,16 @@
     padding: 0.75rem 0;
 }
 
+.button-contact {
+    min-width: 100%;
+}
+
+.menu-mobile-button button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
 
 @media screen and (max-width: 768px) {
     
