--- a/components/Feedbacks/Feedbacks.css
+++ b/components/Feedbacks/Feedbacks.css
@@ -121,6 +121,7 @@
         padding-top: 24px;
         flex-direction: column;
         gap: 1rem;
+        align-items: start;
     }
 
     .company-logo {
@@ -142,6 +143,14 @@
         font-family: 'Archivo', serif;
     }
     
+}
+
+@media screen and (max-width: 420px) {
+    
+    .feedbacks-content {
+        gap: 6rem;
+    } 
+
 }
 
 @media screen and (max-width: 340px) {
